--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261579106842987%22%3A%22iqWfAGxk%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "datr",
+        "value": "RsqLaPKmYYrRlZN-pGvMcR5t",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "sb",
+        "value": "RsqLaBd4GJbLDyQgLkiB6WeG",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x854",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579106842987",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "xs",
+        "value": "5%3AMdcbsyObn_DgTQ%3A2%3A1753991801%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "fr",
+        "value": "0atTCJtOMoAFtugDZ.AWdvR8upzPc2tsrPRmHrnJ77VMCgA2-eMIL-ZoDSDfvvMl_oJ1k.Boi8pG..AAA.0.0.Boi8p9.AWfTL4bihydI2Sny3zlRui9-AFw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.495Z",
+        "lastAccessed": "2025-07-31T19:59:08.495Z"
+    },
+    {
+        "key": "pas",
+        "value": "61579106842987%3AVb88u1GMOg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.496Z",
+        "lastAccessed": "2025-07-31T19:59:08.496Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2884%3Btimestamp%3A1753991806",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.496Z",
+        "lastAccessed": "2025-07-31T19:59:08.496Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101737821%3BT%3A29233196",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.496Z",
+        "lastAccessed": "2025-07-31T19:59:08.496Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B750x384x2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T19:59:08.496Z",
+        "lastAccessed": "2025-07-31T19:59:08.496Z"
+    }
+]
