--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,48 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261579106842987%22%3A%22iqWfAGxk%22%7D",
+        "value": "%7B%2261579106842987%22%3A%22xyDhHDck%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "datr",
-        "value": "RsqLaPKmYYrRlZN-pGvMcR5t",
+        "value": "KeqLaCLPYrKy_YUc2E7oHk1Q",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "sb",
-        "value": "RsqLaBd4GJbLDyQgLkiB6WeG",
+        "value": "K-qLaHqFUSwAbh4ccNJpdGZK",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -32,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "wd",
@@ -41,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "c_user",
@@ -50,26 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "xs",
-        "value": "5%3AMdcbsyObn_DgTQ%3A2%3A1753991801%3A-1%3A-1",
+        "value": "3%3A20e5UuTME7176Q%3A2%3A1753999929%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "fr",
-        "value": "0atTCJtOMoAFtugDZ.AWdvR8upzPc2tsrPRmHrnJ77VMCgA2-eMIL-ZoDSDfvvMl_oJ1k.Boi8pG..AAA.0.0.Boi8p9.AWfTL4bihydI2Sny3zlRui9-AFw",
+        "value": "0tI7B3mZ6VaMWjT59.AWc8Kqc98zyTBsT_5QchiPu3i8bTyy70vxtkeKbrnu0QHtfdvA4.Boi-or..AAA.0.0.Boi-o-.AWfH0qHqGbgKYm6bixwUJ_bgG08",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "locale",
@@ -77,35 +95,35 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.495Z",
-        "lastAccessed": "2025-07-31T19:59:08.495Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "pas",
-        "value": "61579106842987%3AVb88u1GMOg",
+        "value": "61579106842987%3AqnvKYSUZl1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.496Z",
-        "lastAccessed": "2025-07-31T19:59:08.496Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2884%3Btimestamp%3A1753991806",
+        "value": "v2%3Bclient_version%3A2884%3Btimestamp%3A1753999934",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.496Z",
-        "lastAccessed": "2025-07-31T19:59:08.496Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "fbl_st",
-        "value": "101737821%3BT%3A29233196",
+        "value": "101429149%3BT%3A29233332",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.496Z",
-        "lastAccessed": "2025-07-31T19:59:08.496Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     },
     {
         "key": "vpd",
@@ -113,7 +131,7 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T19:59:08.496Z",
-        "lastAccessed": "2025-07-31T19:59:08.496Z"
+        "creation": "2025-07-31T22:13:11.403Z",
+        "lastAccessed": "2025-07-31T22:13:11.403Z"
     }
 ]
