--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,21 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261579106842987%22%3A%22xyDhHDck%22%7D",
+        "value": "%7B%2261578776320635%22%3A%22QB6Azxbd%22%2C%2261579106842987%22%3A%22yNPC7DF2%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
+        "creation": "2025-08-01T21:10:27.631Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
     },
     {
         "key": "datr",
-        "value": "KeqLaCLPYrKy_YUc2E7oHk1Q",
+        "value": "mJmMaGE9FJ7XEutb0LPKzybx",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
     },
     {
         "key": "ps_n",
@@ -32,62 +32,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
     },
     {
         "key": "sb",
-        "value": "K-qLaHqFUSwAbh4ccNJpdGZK",
+        "value": "mZmMaF9GFSYYI4iPyyLrLb_l",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x854",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61579106842987",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "xs",
-        "value": "3%3A20e5UuTME7176Q%3A2%3A1753999929%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "fr",
-        "value": "0tI7B3mZ6VaMWjT59.AWc8Kqc98zyTBsT_5QchiPu3i8bTyy70vxtkeKbrnu0QHtfdvA4.Boi-or..AAA.0.0.Boi-o-.AWfH0qHqGbgKYm6bixwUJ_bgG08",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
     },
     {
         "key": "locale",
@@ -95,35 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "pas",
-        "value": "61579106842987%3AqnvKYSUZl1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2884%3Btimestamp%3A1753999934",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101429149%3BT%3A29233332",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
     },
     {
         "key": "vpd",
@@ -131,7 +59,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-31T22:13:11.403Z",
-        "lastAccessed": "2025-07-31T22:13:11.403Z"
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x854",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579106842987",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "xs",
+        "value": "46%3AJaF1UcXHWAG1og%3A2%3A1754082577%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "fr",
+        "value": "0UdehN40c2hwMVwge.AWeuQi2vNkuzVcQ05Q321pXqyb36fVTn6GdyE9a2bx4gR7ePgu4.BojJmZ..AAA.0.0.BojS0X.AWf3TI3FOeQZwhDOSpfgkrE7ztA",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "pas",
+        "value": "61578776320635%3Apx1gf7HofU%2C61579106842987%3AkLwSsbkGFd",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101732501%3BT%3A29234709",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2884%3Btimestamp%3A1754082584",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-01T21:10:27.632Z",
+        "lastAccessed": "2025-08-01T21:10:27.632Z"
     }
-]
+        ]
